# rust-dpdk

./: Cargo.toml  LICENSE  README.md
apps/: Cargo.toml
apps/examples/helloworld/: main.rs
apps/examples/l2fwd/: main.rs
apps/src/: errors.rs  ethdev.rs  ether.rs  ffi.rs  lib.rs  mbuf.rs  mempool.rs  ring.rs
apps/src/common/: cycles.rs  dev.rs  eal.rs  launch.rs  lcore.rs  malloc.rs  memzone.rs  mod.rs
bindings/dpdk/: Cargo.toml
bindings/dpdk-sys/: Cargo.toml  build.rs
bindings/dpdk-sys/src/: lib.rs
bindings/dpdk/examples/: arp_echo.rs
bindings/dpdk/src/: eal.rs  ffi.rs  lib.rs  zeroable.rs
c_vs_rust/: README.md  traffic_desc.py
l2fwd/: Cargo.toml
l2fwd/src/: main.rs
pkt_perf/benches/: my_benchmark.rs
rust-dpdk/bindings/: INSTALL-DOCKER.md
rust-dpdk/bindings/dpdk-sys/: build.rs
rust-dpdk/bindings/dpdk-sys/src/: lib.rs
rust-dpdk/bindings/dpdk/examples/: arp_echo.rs
rust-dpdk/bindings/dpdk/src/: eal.rs  tx_buffer.rs
rust-dpdk/c_vs_rust/: README.md  traffic_desc.py
rust-dpdk/l2fwd/: Cargo.toml
rust-dpdk/l2fwd/src/: main.rs  utils.rs
rust-dpdk/pkt_perf/: Cargo.toml
rust-dpdk/pkt_perf/src/: lib.rs
