[package]
name = "apps"
version = "0.1.0"
authors = ["Michał Niciejewski <michal.niciejewski@codilime.com>"]
edition = "2018"

[dependencies]
rust-dpdk-sys = { path = "../bindings/dpdk-sys" }
log = "0.4"
bitflags = "1.0"
failure = "0.1"
lazy_static = "1.2"
libc = "0.2"
time = "0.1"
cfile = "0.4"
rand = "0.6"
errno = "0.2"
num-traits = "0.2"
num-derive = "0.2"
itertools = "0.8"

[build-dependencies]
log = "0.4"
pretty_env_logger = "0.3"

[dev-dependencies]
pretty_env_logger = "0.3"
num_cpus = "1.0"
getopts = "0.2"
nix = "0.14"

[lib]
name = "rte"

[[example]]
name = "helloworld"
path = "examples/helloworld/main.rs"

[[example]]
name = "l2fwd"
path = "examples/l2fwd/main.rs"
