[package]
name = "l2fwd"
version = "0.1.0"
authors = ["Michał Krasnoborski <michal.krasnoborski@codilime.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dpdk = { path = "../bindings/dpdk" }
structopt = "0.3"
anyhow = "1"
itertools = "0.10"
log = "0.4"
simple_logger = "1"
smoltcp = "0.7.1"
arrayvec = "0.7"
