[package]
name = "pkt_perf"
version = "0.1.0"
authors = ["Marcin Parafiniuk <marcin.parafiniuk@codilime.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27.2"
pnet_datalink = "0.27.2"
smoltcp = "0.7.1"
criterion = "0.3"
etherparse = "0.9.0"

[[bench]]
name = "my_benchmark"
harness = false
path = "benches/my_benchmark.rs"
